Add clarification of Auriga ASBL as organizer in T&Cs across all languages

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -287,7 +287,7 @@
     "sections": {
       "article1": {
         "title": "1. Purpose",
-        "content": "These general terms and conditions govern the sale of supervised driving sessions (trackdays) offered by Auriga ASBL, where participants use racing vehicles provided by the Organizer under the supervision of a professional coach."
+        "content": "These general terms and conditions govern the sale of supervised driving sessions (trackdays) offered by Auriga ASBL, the organizer, where participants use racing vehicles provided by the Organizer under the supervision of a professional coach."
       },
       "article2": {
         "title": "2. Included Services",
