--- a/src/i18n/messages/fr.json
+++ b/src/i18n/messages/fr.json
@@ -362,7 +362,7 @@
     "sections": {
       "article1": {
         "title": "1. Objet",
-        "content": "Les présentes conditions générales régissent la vente de sessions de pilotage encadrées (trackdays) proposées par Auriga ASBL, où les participants utilisent les véhicules de course fournis par l'Organisateur sous la supervision d'un coach professionnel."
+        "content": "Les présentes conditions générales régissent la vente de sessions de pilotage encadrées (trackdays) proposées par Auriga ASBL, l'organisateur, où les participants utilisent les véhicules de course fournis par l'Organisateur sous la supervision d'un coach professionnel."
       },
       "article2": {
         "title": "2. Prestations incluses",
