--- a/src/i18n/messages/nl.json
+++ b/src/i18n/messages/nl.json
@@ -287,7 +287,7 @@
     "sections": {
       "article1": {
         "title": "1. Doel",
-        "content": "Deze algemene voorwaarden regelen de verkoop van begeleide rijsessies (trackdays) aangeboden door Auriga ASBL, waarbij deelnemers gebruik maken van racevoertuigen die door de Organisator ter beschikking worden gesteld onder toezicht van een professionele coach."
+        "content": "Deze algemene voorwaarden regelen de verkoop van begeleide rijsessies (trackdays) aangeboden door Auriga ASBL, de organisator, waarbij deelnemers gebruik maken van racevoertuigen die door de Organisator ter beschikking worden gesteld onder toezicht van een professionele coach."
       },
       "article2": {
         "title": "2. Inbegrepen diensten",
