--- a/src/i18n/messages/nl.json
+++ b/src/i18n/messages/nl.json
@@ -109,7 +109,7 @@
     },
     "contact": {
       "title": "Contacteer ons",
-      "email": "hello@auriga-racing.be",
+      "email": "hello@aurigaracing.be",
       "phone": "+32 474 79 39 24",
       "organization": "Auriga VZW"
     },
