fix: update contact email domain from auriga-racing.be to aurigaracing.be

--- a/src/i18n/messages/fr.json
+++ b/src/i18n/messages/fr.json
@@ -109,7 +109,7 @@
     },
     "contact": {
       "title": "Contactez-nous",
-      "email": "hello@auriga-racing.be",
+      "email": "hello@aurigaracing.be",
       "phone": "+32 474 79 39 24",
       "organization": "Auriga ASBL"
     },
