feat: implement VAT calculation and display prices with tax included/excluded

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -169,13 +169,14 @@
       "requirements": "Please arrive at least 1 hour before the start time for registration and briefing.",
       "soldOut": "Sold Out",
       "booked": "Booked",
-      "sessionPrice": "{price}€ / {session}",
-      "braceletPrice": "{price}€ / pilot bracelet for the day",
+      "priceVATIncl": "{price}€ TTC",
+      "priceVATExcl": "{price}€ HT",
+      "bracelet": "Driver bracelet for the day",
+      "session": "Session price of {sessionTime}",
       "canceled": "Canceled",
       "canceledNotice": "This event has been canceled",
       "eventCanceled": "Event Canceled"
     },
-    "disclaimerPrice": "Price displayed excluding taxes",
     "backToEvents": "Back to events",
     "date": "Date",
     "time": "Time",
