--- a/src/i18n/messages/fr.json
+++ b/src/i18n/messages/fr.json
@@ -169,13 +169,14 @@
       "requirements": "Veuillez arriver au moins 1 heure avant l'heure de début pour l'inscription et le briefing.",
       "soldOut": "Complet",
       "booked": "Réservé",
-      "sessionPrice": "{price}€ / {session}",
-      "braceletPrice": "{price}€ / bracelet pilote à la journée",
+      "priceVATIncl": "{price}€ TTC",
+      "priceVATExcl": "{price}€ HT",
+      "bracelet": "Bracelet pilote à la journée",
+      "session": "Prix de la session de {sessionTime}",
       "canceled": "Annulé",
       "canceledNotice": "Cet événement a été annulé",
       "eventCanceled": "Événement annulé"
     },
-    "disclaimerPrice": "Prix affiché hors taxes",
     "backToEvents": "Retour aux événements",
     "date": "Date",
     "time": "Horaire",
