--- a/src/i18n/messages/nl.json
+++ b/src/i18n/messages/nl.json
@@ -169,13 +169,14 @@
       "requirements": "Deelnemers moeten een geldig rijbewijs hebben en een eigen voertuig in goede staat. Veiligheidsuitrusting wordt voor het evenement gecontroleerd. Kom minstens 30 minuten voor de starttijd aan voor registratie en briefing.",
       "soldOut": "Uitverkocht",
       "booked": "Geboekt",
-      "sessionPrice": "{price}€ / {session}",
-      "braceletPrice": "{price}€ / pilotenarmband voor de dag",
+      "priceVATIncl": "{price}€ TTC",
+      "priceVATExcl": "{price}€ HT",
+      "bracelet": "Rijdersarmband voor de dag",
+      "session": "Sessieprijs van {sessionTime}",
       "canceled": "Geannuleerd",
       "canceledNotice": "Dit evenement is geannuleerd",
       "eventCanceled": "Evenement geannuleerd"
     },
-    "disclaimerPrice": "Prijzen zijn exclusief btw",
     "backToEvents": "Terug naar evenementen",
     "date": "Datum",
     "time": "Tijd",
