--- a/src/i18n/messages/fr.json
+++ b/src/i18n/messages/fr.json
@@ -171,7 +171,7 @@
       "booked": "Réservé",
       "priceVATIncl": "{price}€ TTC",
       "priceVATExcl": "{price}€ HT",
-      "bracelet": "Bracelet pilote à la journée",
+      "bracelet": "Prix du bracelet pilote à la journée",
       "session": "Prix de la session de {sessionTime}",
       "canceled": "Annulé",
       "canceledNotice": "Cet événement a été annulé",
