i18n: update VAT price labels in English and Dutch translations

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -169,8 +169,8 @@
       "requirements": "Please arrive at least 1 hour before the start time for registration and briefing.",
       "soldOut": "Sold Out",
       "booked": "Booked",
-      "priceVATIncl": "{price}€ TTC",
-      "priceVATExcl": "{price}€ HT",
+      "priceVATIncl": "{price}€ incl. VAT",
+      "priceVATExcl": "{price}€ excl. VAT",
       "bracelet": "Driver bracelet price for the day",
       "session": "Session price of {sessionTime}",
       "canceled": "Canceled",
