--- a/src/i18n/messages/nl.json
+++ b/src/i18n/messages/nl.json
@@ -169,8 +169,8 @@
       "requirements": "Deelnemers moeten een geldig rijbewijs hebben en een eigen voertuig in goede staat. Veiligheidsuitrusting wordt voor het evenement gecontroleerd. Kom minstens 30 minuten voor de starttijd aan voor registratie en briefing.",
       "soldOut": "Uitverkocht",
       "booked": "Geboekt",
-      "priceVATIncl": "{price}€ TTC",
-      "priceVATExcl": "{price}€ HT",
+      "priceVATIncl": "{price}€ incl. BTW",
+      "priceVATExcl": "{price}€ excl. BTW",
       "bracelet": "Prijs rijdersarmband voor de dag",
       "session": "Sessieprijs van {sessionTime}",
       "canceled": "Geannuleerd",
