Add Germany country translations to all language files

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -193,6 +193,7 @@
     "countries": {
       "belgium": "Belgium",
       "france": "France",
+      "germany": "Germany",
       "netherlands": "Netherlands"
     },
     "bookingSection": {
