--- a/src/i18n/messages/fr.json
+++ b/src/i18n/messages/fr.json
@@ -193,6 +193,7 @@
     "countries": {
       "belgium": "Belgique",
       "france": "France",
+      "germany": "Allemagne",
       "netherlands": "Pays-Bas"
     },
     "bookingSection": {
