--- a/src/i18n/messages/nl.json
+++ b/src/i18n/messages/nl.json
@@ -193,6 +193,7 @@
     "countries": {
       "belgium": "België",
       "france": "Frankrijk",
+      "germany": "Duitsland",
       "netherlands": "Nederland"
     },
     "bookingSection": {
